[package]
name = "escafers"
version = "0.1.0"
authors = ["ferhatgec"]
edition = "2018"
description = "parser & generator for escape sequences"
keywords = ["rust", "term", "parser", "escape", "generator"]
readme = "README.md"
repository = "https://github.com/ferhatgec/escafers"
documentation = "https://docs.rs/escafers"
license = "MIT"

include = [
    ".gitignore",
    "Cargo.toml",
    "src/*.rs"
]